# InfiniTAM

./: .gitignore  .gitmodules  README.md  run.sh
InfiniTAM/: CMakeLists.txt
InfiniTAM/Engine/: UIEngine.cpp  UIEngine.h
InfiniTAM/ITMLib/: CMakeLists.txt
InfiniTAM/ITMLib/Engine/: ITMDenseMapper.cpp  ITMDenseMapper.h  ITMDepthTracker.cpp  ITMDepthTracker.h  ITMGroundTruthTracker.cpp  ITMGroundTruthTracker.h  ITMMainEngine.cpp  ITMMainEngine.h  ITMSceneReconstructionEngine.h  ITMTrackerFactory.h  ITMTrackingController.cpp  ITMVisualisationEngine.h
InfiniTAM/ITMLib/Engine/DeviceAgnostic/: ITMRepresentationAccess.h  ITMSceneReconstructionEngine.h  ITMVisualisationEngine.h
InfiniTAM/ITMLib/Engine/DeviceSpecific/CPU/: ITMMeshingEngine_CPU.cpp  ITMSceneReconstructionEngine_CPU.cpp  ITMSceneReconstructionEngine_CPU.h  ITMVisualisationEngine_CPU.cpp  ITMVisualisationEngine_CPU.h
InfiniTAM/ITMLib/Engine/DeviceSpecific/CUDA/: ITMCUDAUtils.h  ITMDepthTracker_CUDA.cu  ITMMeshingEngine_CUDA.cu  ITMMeshingEngine_CUDA.h  ITMSceneReconstructionEngine_CUDA.cu  ITMSceneReconstructionEngine_CUDA.h  ITMSwappingEngine_CUDA.cu  ITMViewBuilder_CUDA.cu  ITMVisualisationEngine_CUDA.cu  ITMVisualisationEngine_CUDA.h
InfiniTAM/ITMLib/Objects/: ITMIntrinsics.h  ITMMesh.h  ITMRenderState_VH.h  ITMScene.h  ITMVoxelBlockHash.h
InfiniTAM/ITMLib/Utils/: ITMLibDefines.h  ITMLibSettings.cpp  ITMLibSettings.h  ITMMath.h  ITMOxtsIO.cpp  ITMOxtsIO.h
InfiniTAM/InstRecLib/: CMakeLists.txt  ChunkManager.h  InstanceReconstructor.cpp  InstanceReconstructor.h  InstanceSegmentationResult.cpp  InstanceSegmentationResult.h  InstanceTracker.cpp  InstanceTracker.h  InstanceView.h  PrecomputedSegmentationProvider.cpp  PrecomputedSegmentationProvider.h  SegmentationDataset.h  SegmentationProvider.cpp  SegmentationProvider.h  SparseSFProvider.h  TODO.md  Track.cpp  Track.h
InfiniTAM/InstRecLib/Utils/: BoundingBox.cpp  BoundingBox.h
InfiniTAM/ORUtils/: CMakeLists.txt  CUDADefines.cpp  CUDADefines.h  Image.h  Matrix.h  MemoryBlock.h
InfiniTAM/Utils/: CMakeLists.txt  FileUtils.cpp
InfiniTAM/cmake/: CUDACheckCompute.cmake
